chore: Update TypeScript configuration to ES2022, bundler module resolution, and enable declaration file generation.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,7 +12,10 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    "emitDeclarationOnly": true,
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true,
 
     /* Linting */
     "strict": true,
